--- a/Views/Account/ChangePassword.cshtml
+++ b/Views/Account/ChangePassword.cshtml
@@ -2,29 +2,28 @@
 @{
     ViewData["Title"] = "ChangePassword";
 }
-
-<h2>Change Password</h2>
-<hr />
-<div class="row">
-    <div class="col-md-12">
-        <form method="post" asp-action="ChangePassword" asp-controller="Account">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="OldPassword"></label>
-                <input asp-for="OldPassword" class="form-control" />
-                <span asp-validation-for="OldPassword" class="text-danger"></span>
+<h1 class="change-password-header">Change Password</h1>
+<hr class="change-password-divider" />
+<div class="row-change-password">
+    <div class="col-change-password">
+        <form method="post" asp-action="ChangePassword" asp-controller="Account" class="form-change-password">
+            <div asp-validation-summary="All" class="validation-summary-change-password"></div>
+            <div class="form-group-change-password">
+                <label asp-for="OldPassword" class="label-change-password"></label>
+                <input asp-for="OldPassword" class="input-change-password" />
+                <span asp-validation-for="OldPassword" class="validation-error-change-password"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="NewPassword"></label>
-                <input asp-for="NewPassword" class="form-control" />
-                <span asp-validation-for="NewPassword" class="text-danger"></span>
+            <div class="form-group-change-password">
+                <label asp-for="NewPassword" class="label-change-password"></label>
+                <input asp-for="NewPassword" class="input-change-password" />
+                <span asp-validation-for="NewPassword" class="validation-error-change-password"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            <div class="form-group-change-password">
+                <label asp-for="ConfirmPassword" class="label-change-password"></label>
+                <input asp-for="ConfirmPassword" class="input-change-password" />
+                <span asp-validation-for="ConfirmPassword" class="validation-error-change-password"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Update</button>
+            <button type="submit" class="btn-change-password">Update</button>
         </form>
     </div>
 </div>
